--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Prova collegamento</h1>
+        <!-- banner -->
+        <header>
+            <img id="logo" src="./img/logo.svg" alt="logo">
+        </header>
+        
     </body>
 </html>
