--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <header>
             <img id="logo" src="./img/logo.svg" alt="logo">
         </header>
-        
+        <main>
+           
+
+        </main>
     </body>
 </html>
