--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
             <img id="logo" src="./img/logo.svg" alt="logo">
         </header>
         <main>
-           
+            <!-- main title -->
+            <section id="main-title">
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                <p>Scritto da <span>The Booleaner</span> <br>il 10/10/2020</p>
+             </section>
+
 
         </main>
     </body>
