--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
                 <p>Scritto da <span>The Booleaner</span> <br>il 10/10/2020</p>
              </section>
+             
+            <!-- photo list -->
+            <section>
+                <img src="./img/tim-1.jpg" alt="">
+                <img src="./img/tim-2.jpg" alt="">
+            </section>
 
 
         </main>
