feat: description photo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <img src="./img/tim-2.jpg" alt="">
             </section>
 
+            <!-- description photo -->
+            <section id="description-photo">
+                <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+                <p>2st Photo: Wikipedia, by Paul Clarke</p>
+             </section>
 
         </main>
     </body>
