feat: information list

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                 <p>2st Photo: Wikipedia, by Paul Clarke</p>
              </section>
 
+             <!-- information -->
+             <section id="information">
+                <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa cupiditate labore non iste repudiandae laudantium et quo consequatur officiis harum saepe illo minus, maiores nostrum fugiat, ipsam quod? Odit, quaerat. <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione obcaecati exercitationem ex, tenetur sapiente officiis assumenda natus itaque explicabo odit ipsam, impedit quas ea dolores eius aliquam dolorem ab consectetur.</span> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod tempora odit nisi aliquid voluptatem adipisci tenetur porro atque obcaecati quisquam maiores tempore blanditiis doloremque eligendi, nihil modi magni minima quia.</p>
+                <ul>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam saepe quaerat doloribus rem non laudantium eveniet incidunt harum repudiandae, eaque iure rerum consequuntur deserunt commodi, modi quas blanditiis quasi voluptatum.</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam saepe quaerat doloribus rem non laudantium eveniet incidunt harum repudiandae, eaque iure rerum consequuntur deserunt commodi, modi quas blanditiis quasi voluptatum.</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam saepe quaerat doloribus rem non laudantium eveniet incidunt harum repudiandae, eaque iure rerum consequuntur deserunt commodi, modi quas blanditiis quasi voluptatum.</li>
+                </ul>  
+            </section>
+
         </main>
     </body>
 </html>
