--- a/index.html
+++ b/index.html
@@ -39,7 +39,34 @@
                     <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam saepe quaerat doloribus rem non laudantium eveniet incidunt harum repudiandae, eaque iure rerum consequuntur deserunt commodi, modi quas blanditiis quasi voluptatum.</li>
                 </ul>  
             </section>
-
+            
+            <!-- table -->
+            <table>
+                <thead>
+                    <tr>
+                        <th class="column1-2">Lorem ipsum dolor</th>
+                        <th class="column1-2">Lorem ipsum dolor</th>
+                        <th id="column3">Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="color-row">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, sequi aspernatur accusantium veritatis eos dolores iusto voluptatem aliquam ad tempore eaque fuga deserunt ratione sed dolorem nisi perferendis consequatur ut.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, sequi aspernatur accusantium veritatis eos dolores iusto voluptatem aliquam ad tempore eaque fuga deserunt ratione sed dolorem nisi perferendis consequatur ut.</td>
+                    </tr>
+                    <tr class="color-row">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, sequi aspernatur accusantium veritatis eos dolores iusto voluptatem aliquam ad tempore eaque fuga deserunt ratione sed dolorem nisi perferendis consequatur ut.</td>
+                    </tr>
+                </tbody>
+             </table>
         </main>
     </body>
 </html>
