--- a/index.html
+++ b/index.html
@@ -68,5 +68,9 @@
                 </tbody>
              </table>
         </main>
+        <!-- intestazione piè di pagina -->
+        <footer>
+            <p>Copyright The Booleaner - Tutti i diritti riservati</p>
+        </footer>
     </body>
 </html>
