feat: bonus pattern

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
              
             <!-- photo list -->
             <section>
-                <img src="./img/tim-1.jpg" alt="">
-                <img src="./img/tim-2.jpg" alt="">
+                <img src="./img/tim-1.jpg" alt="Tim Berners-Lee 1">
+                <img src="./img/tim-2.jpg" alt="Tim Berners-Lee 2">
             </section>
 
             <!-- description photo -->
